# auvsl_dynamics

./: CMakeLists.txt  README.md  package.xml  todo.org
config/: params.yaml
include/auvsl_dynamics/: AdjointMethod.h  BekkerModel.h  CombinedModel.h  HybridDynamics.h  HybridDynamics.h~  Model.h  NNJackalModel.h  ODESystem.h  TireNetwork.h  VerifyModel.h  VerifyModel.h~  extra_transforms.h  utils.h
launch/: search_bekker_params.launch  test_dataset.launch  test_dynamics.launch  test_gradients.launch  train_hybrid_model.launch  verify_hybrid_model.launch  verify_hybrid_model.launch~
scripts/: log.csv  log2.csv  plot.py  plot_loss.py  pretrain.py  pretrain_velocities.py  train_tire_net.py
src/: AdjointMethod.cpp  BekkerModel.cpp  CombinedModel.cpp  HybridDynamics.cpp  HybridDynamicsOld.cpp  NNJackalModel.cpp  TireNetwork.cpp  TireNetworkWeights.cpp  VerifyModel.cpp  VerifyModel.cpp~  search_bekker_params.cpp  test_dataset.cpp  test_dynamics_node.cpp  test_gradient_methods.cpp  train_hybrid_model.cpp  utils.cpp  verify_hybrid_model.cpp
